--- a/homepage.html
+++ b/homepage.html
@@ -14,6 +14,44 @@
     <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
+
+<nav class = "navbar navbar-expand-md navbar-dark bg-dark fixed-top">
+  <div class = "container-fluid">
+  <a class = "navbar-brand"  href="">logo</a>
+  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target = "#main_menu" aria-controls="main_menu" aria-expanded="false">
+    <span class= "navbar-toggler-icon"></span>
+  </button>
+  <div id = "main_menu" class="collapse navbar-collapse">
+<ul class="navbar-nav me-auto">
+  <li class="nav-item"><a class="nav-link active" href = "">home</a></li>
+  <li class="nav-item"><a class="nav-link" href = "">About</a></li>
+  <li class="nav-item"><a  class="nav-link"href = "">Media</a></li>
+  <li class="nav-item"><a class="nav-link" href = "">Projects</a></li>
+  <li class="nav-item dropdown"><a class="nav-link dropdown-toggle" role="button" data-bs-toggle = "dropdown" href = "">Contact</a>
+  <ul class="dropdown-menu">
+    <li><a class= "dropdown-item" href="">email</a></li>
+    <li><a class= "dropdown-item" href="">phone</a></li>
+    <li><a class= "dropdown-item" href="">address</a></li>
+    <li><a class= "dropdown-item" href="">fax</a></li>
+   
+  </ul>
+  </li>
+  
+</ul>
+<form action="">
+  <input type="search" placeholder="Search">
+  <button class="btn btn-primary">Search</button>
+</form>
+
+
+  </div>
+</div>
+</nav>
+
+
+
+
+
     <a class="btn btn-primary" href="#">Primary button</a>
     <a class="btn btn-secondary" href="#">second button</a>
     <a class="btn btn-success" href="#">success button</a>
